--- a/day51/index.html
+++ b/day51/index.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title>ToDo</title>
+    <title>To-Do</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100i,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/master.css">
