--- a/day52/index.html
+++ b/day52/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <title>Timer</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
