--- a/day53/index.html
+++ b/day53/index.html
@@ -3,10 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
     <script type="text/javascript" src="./js/script.js"></script>
   </head>
   <body>
+    <section>
+      <div class="container">
+        <div class="image">
+          <div class="eye" id="one"></div>
+          <div class="eye" id="two"></div>
+        </div>
+      </div>
+      <div class="buttons">
 
+        <div class="default">
+            Default
+        </div>
+
+        <div class="blink">
+            Blink
+        </div>
+
+        <div class="side-view">
+            Nystagmus
+        </div>
+
+        <div class="up-view">
+          Up view
+        </div>
+      </div>
+    </section>
+
+    <footer id='foot'>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+    </footer>
   </body>
 </html>
