--- a/day52/index.html
+++ b/day52/index.html
@@ -6,6 +6,7 @@
     <title>Timer</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.core.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
   </head>
   <body>
@@ -27,6 +28,16 @@
           <span class="refresh"><img src="./img/refresh.svg" alt=""></span>
           <span class="play"><img src="./img/play.svg" alt=""></span>
           <span class="stop"><img src="./img/stop.svg" alt=""></span>
+        </div>
+
+        <div class="timeUp">
+          <span class="close">X</span>
+          <p>
+            &ensp;&ensp;
+            <span class="watch"><img src="./img/stopwatch.svg" alt=""></span>
+            <br>
+            Times up
+          </p>
         </div>
       </div>
     </section>
