--- a/default.html
+++ b/default.html
@@ -71,6 +71,9 @@
 
   <section>
     <div class="container">
+      <h3><span class="days"> Day 054 &nbsp;</span><a href="../day54/index.html" data-linktext="JamaCircle" class="slide_from_bottom">JamaCircle</a></h3>
+      <h3><span class="days"> Day 053 &nbsp;</span><a href="../day53/index.html" data-linktext="Portrait" class="slide_from_bottom">Portrait</a></h3>
+      <h3><span class="days"> Day 052 &nbsp;</span><a href="../day52/index.html" data-linktext="Stop Watch" class="slide_from_bottom">Stop Watch</a></h3>
       <h3><span class="days"> Day 051 &nbsp;</span><a href="../day51/index.html" data-linktext="TO-DO 2.0" class="slide_from_bottom">TO-DO 2.0</a></h3>
       <h3><span class="days"> Day 050 &nbsp;</span><a href="../day50/index.html" data-linktext="Code Player" class="slide_from_bottom">Code Player</a></h3>
       <h3><span class="days"> Day 049 &nbsp;</span><a href="../day49/index.html" data-linktext="RGB" class="slide_from_bottom">RGB</a></h3>
