--- a/day55/index.html
+++ b/day55/index.html
@@ -26,5 +26,9 @@
 
       </div>
     </section>
+
+    <footer id='foot'>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+    </footer>
   </body>
 </html>
