--- a/day55/index.html
+++ b/day55/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,800" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
     <!-- <script type="text/javascript" src="./js/script.js"></script> -->
