--- a/day55/index.html
+++ b/day55/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,800" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
-    <!-- <script type="text/javascript" src="./js/script.js"></script> -->
+    <script type="text/javascript" src="./js/script.js"></script>
   </head>
   <body>
     <section>
@@ -16,12 +16,27 @@
         </div>
         <div class="data">
           <div class="test-data">
-            <h3>Paris</h3>
+            <h3 class="city">Paris</h3>
             <h4>FRI, 8 jUN</h4>
-            <h3>Sunny</h3>
+            <h3 class="description">Sunny</h3>
           </div>
           <div class="img-data">
             <img src="./img/animated/night.svg" alt="">
+          </div>
+        </div>
+
+        <div class="list">
+          <div class="temp">
+            <span class="time">11:30 AM</span>
+            <span class="temprature first-temp"><span class="c">27</span>°C</span>
+          </div>
+          <div class="temp">
+            <span class="time">11:30 AM</span>
+            <span class="temprature"> <img class="sub-img" src="/img/animated/night.svg"/> <span class="c">27</span>°C</span>
+          </div>
+          <div class="temp">
+            <span class="time">11:30 AM</span>
+            <span class="temprature"> <img class="sub-img" src="/img/animated/night.svg"/> <span class="c">27</span>°C</span>
           </div>
         </div>
 
