--- a/day55/index.html
+++ b/day55/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,800" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
+    <script type="text/javascript" src="./js/weather.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
   </head>
   <body>
@@ -27,15 +28,15 @@
 
         <div class="list">
           <div class="temp">
-            <span class="time">11:30 AM</span>
+            <span class="time">11:30</span>
             <span class="temprature first-temp"><span class="c">27</span>°C</span>
           </div>
           <div class="temp">
-            <span class="time">11:30 AM</span>
+            <span class="time">11:30</span>
             <span class="temprature"> <img class="sub-img" src="/img/animated/night.svg"/> <span class="c">27</span>°C</span>
           </div>
           <div class="temp">
-            <span class="time">11:30 AM</span>
+            <span class="time">11:30</span>
             <span class="temprature"> <img class="sub-img" src="/img/animated/night.svg"/> <span class="c">27</span>°C</span>
           </div>
         </div>
