--- a/day55/index.html
+++ b/day55/index.html
@@ -22,7 +22,7 @@
             <h3 class="description">Sunny</h3>
           </div>
           <div class="img-data">
-            <img class="main-img" src="" alt="">
+            <img class="main-img" src="./img/animated/day.svg" alt="">
           </div>
         </div>
 
@@ -33,11 +33,11 @@
           </div>
           <div class="temp">
             <span class="time">11:30</span>
-            <span class="temprature"> <img class="sub-img" src=""/> <span class="c">27</span>°C</span>
+            <span class="temprature"> <img class="sub-img" src="./img/animated/cloudy.svg"/> <span class="c">27</span>°C</span>
           </div>
           <div class="temp">
             <span class="time">11:30</span>
-            <span class="temprature"> <img class="sub-img" src=""/> <span class="c">27</span>°C</span>
+            <span class="temprature"> <img class="sub-img" src="./img/animated/cloudy.svg"/> <span class="c">27</span>°C</span>
           </div>
         </div>
 
