--- a/day51/index.html
+++ b/day51/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do</title>
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100i,400,500,700" rel="stylesheet">
