--- a/default.html
+++ b/default.html
@@ -71,6 +71,7 @@
 
   <section>
     <div class="container">
+      <h3><span class="days"> Day 056 &nbsp;</span><a href="../day56/index.html" data-linktext="Snow" class="slide_from_bottom">Snow</a></h3>
       <h3><span class="days"> Day 055 &nbsp;</span><a href="../day55/index.html" data-linktext="Weather" class="slide_from_bottom">Weather</a></h3>
       <h3><span class="days"> Day 054 &nbsp;</span><a href="../day54/index.html" data-linktext="JamaCircle" class="slide_from_bottom">JamaCircle</a></h3>
       <h3><span class="days"> Day 053 &nbsp;</span><a href="../day53/index.html" data-linktext="Portrait" class="slide_from_bottom">Portrait</a></h3>
