--- a/day57/index.html
+++ b/day57/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
-    <!-- <h1>Let's Go For A SpaceWalk</h1> -->
+    <h1>Let's Go For A SpaceWalk</h1>
     <div id="space"></div>
 
     <footer id='foot'>
