--- a/day57/index.html
+++ b/day57/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>Let's Go For A SpaceWalk</h1>
+
+    <div class="Astro">
+    <img src="./img/Astronaut.png" alt="Astronaut">  
+    </div>
+
     <div id="space"></div>
 
     <footer id='foot'>
