--- a/day12/index.html
+++ b/day12/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Digital Clock</title>
-        <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/master.css">
 
-    </head>
-    <body>
-        <div class="clock">
-            <div class="inside">
-                <div class="content">
-                    <p class='days'><span id="sun">SUN</span>&nbsp;&nbsp;<span id="mon">MON</span>&nbsp;&nbsp;<span id=tus"">TUS</span>&nbsp;&nbsp;<span id="wed">WED</span>&nbsp;&nbsp;<span id="thu">THU</span>&nbsp;&nbsp;<span id="fri">FRI</span>&nbsp;&nbsp;<span id="sat">SAT</span></p>
-                    <br>
-                    <p class='text'><span id='hours'></span> : <span id='min'></span> : <span id='sec'></span>&nbsp;&nbsp;<span id='time'></span></p>
-                    <p id=date>
-                        <span id='cal'><img src="img/days.svg" alt="cal" /></span>
-                        <span id='day'></span>
-                        <span id='month'></span>
-                        <span id='year'></span>
-                    </p>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <title>Digital Clock</title>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/master.css">
+
+</head>
+
+<body>
+    <div class="clock">
+        <div class="inside">
+            <div class="content">
+                <p class='days'><span id="sun">SUN</span>&nbsp;&nbsp;<span id="mon">MON</span>&nbsp;&nbsp;<span id="tus">TUS</span>&nbsp;&nbsp;<span id="wed">WED</span>&nbsp;&nbsp;<span id="thu">THU</span>&nbsp;&nbsp;<span id="fri">FRI</span>&nbsp;&nbsp;<span id="sat">SAT</span></p>
+                <br>
+                <p class='text'><span id='hours'></span> : <span id='min'></span> : <span id='sec'></span>&nbsp;&nbsp;<span id='time'></span></p>
+                <p id=date>
+                    <span id='cal'><img src="img/days.svg" alt="cal" /></span>
+                    <span id='day'></span>
+                    <span id='month'></span>
+                    <span id='year'></span>
+                </p>
             </div>
         </div>
+    </div>
 
-        <script type="text/javascript" src="js/script.js"></script>
-    </body>
+    <script type="text/javascript" src="js/script.js"></script>
+</body>
+
 </html>
