--- a/day40/index.html
+++ b/day40/index.html
@@ -55,6 +55,30 @@
 
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
+          <a href="p5/practice/zoog/index.html">
+            <img src="p5/practice/zoog/zoog.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Zoog</h3>
+            <h4>In the book, Zoog is our companion who will be experamnted on witch code, so I thought I'd introduce you to him. Say hello. </h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/events/index.html">
+            <img src="p5/practice/events/events.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Events</h3>
+            <h4>Since I'm starting from scratch with teh processing book, one of the topics was events and here is a sample of the excersize where when you click the mouse you get a box with random colors. </h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
           <a href="p5/practice/drawing_app/index.html">
             <img src="p5/practice/drawing_app/draw-app.gif" alt="" class="img-responsive img-rounded">
           </a>
@@ -710,7 +734,7 @@
 
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script src="./libraries/p5.js"></script>
-  <script src="./js/sketch.js"></script>
+  <!-- <script src="./js/sketch.js"></script> -->
 </body>
 
 </html>
