updating generative art site

--- a/day40/index.html
+++ b/day40/index.html
@@ -55,6 +55,114 @@
 
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
+          <a href="p5/practice/color_bounce/index.html">
+            <img src="p5/practice/color_bounce/color_bounce.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Color Bounce</h3>
+            <h4>This was a really fun sketch to do. Basically the color changes based on the ball hitting the corders. </h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/rainbow_bounce/index.html">
+            <img src="p5/practice/rainbow_bounce/rainbow_bounce.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Rainbow Bounce</h3>
+            <h4>I believe the title says it all a ball that bounces and changes color</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/green_pallet/index.html">
+            <img src="p5/practice/green_pallet/green_pallet.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Color Pallet</h3>
+            <h4>Just playing around with random, and got a lovely green color pallet</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/blastingoff/index.html">
+            <img src="p5/practice/blastingoff/blastingoff.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Blasting Zoog</h3>
+            <h4>Well since we'll be seeing Zoog for a while now, in this chapter we make him more of a jitery rocket that blasts off [in slow motion]</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/poka_dots/index.html">
+            <img src="p5/practice/poka_dots/poka_dots.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>PokaDots</h3>
+            <h4>More variable manipulation, This was a really fun sketch. Rando dots with random diameters keep popping up with random colors. It's very pleasant to look at :)</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/windmill/index.html">
+            <img src="p5/practice/windmill/windmill.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Windmill</h3>
+            <h4>More variable manipulation, In this sketch, I tried to make a fan like movment. I'm a bit annoyed by the speed, but I guess with time I'll get the hangof it.</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/pulse/index.html">
+            <img src="p5/practice/pulse/pulse.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Pulse</h3>
+            <h4>More variable manipulation, In this sketch, I tried to make the circles pulse in varying speeds and direction.</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/circle_growth/index.html">
+            <img src="p5/practice/circle_growth/circle_growth.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>More Variables</h3>
+            <h4>This section focuses on variables and how you manipulate them through time to generate dynamicy. </h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/circle_size/index.html">
+            <img src="p5/practice/circle_size/circle_size.gif" alt="" class="img-responsive img-rounded">
+          </a>
+          <div class="caption">
+            <h3>Variables</h3>
+            <h4>This section focuses on variables and how you manipulate them through time to generate dynamicy. </h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
           <a href="p5/practice/zoog/index.html">
             <img src="p5/practice/zoog/zoog.gif" alt="" class="img-responsive img-rounded">
           </a>
