--- a/day59/index.html
+++ b/day59/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <section class="content">
+      <p class="svg-link"><span>5. &nbsp; </span> <a href="./projects/Third-SVG/index.html">Minimal</a></p>
       <p class="svg-link"><span>4. &nbsp; </span> <a href="./projects/Name/name.html">Name</a></p>
       <p class="svg-link"><span>3. &nbsp; </span> <a href="./projects/Second-SVG/index.html">Logo Animation</a></p>
       <p class="svg-link"><span>2. &nbsp; </span> <a href="./projects/Swirl/swirle.html">Swirl</a></p>
