Fix arabic text

--- a/default.html
+++ b/default.html
@@ -71,7 +71,7 @@
 
     <section>
         <div class="container">
-            <h3><span class="days"> Day 059 &nbsp;</span><a href="../day59/index.html" data-linktext="عذوق تتعلم svg" class="slide_from_bottom">عذوق تتعلم svg</a></h3>
+            <h3 class="arabic"><span class="days"> Day 059 &nbsp;</span><a href="../day59/index.html" data-linktext="عذوق تتعلم svg" class="slide_from_bottom">عذوق تتعلم svg</a></h3>
             <h3><span class="days"> Day 058 &nbsp;</span><a href="../day58/index.html" data-linktext="Dice Game" class="slide_from_bottom">Dice Game</a></h3>
             <h3><span class="days"> Day 057 &nbsp;</span><a href="../day57/index.html" data-linktext="Space" class="slide_from_bottom">Space</a></h3>
             <h3><span class="days"> Day 056 &nbsp;</span><a href="../day56/index.html" data-linktext="Snow" class="slide_from_bottom">Snow</a></h3>
