--- a/day59/index.html
+++ b/day59/index.html
@@ -15,6 +15,9 @@
     </header>
 
     <section class="content">
+      <p class="svg-link"><span>7. &nbsp; </span> <a href="./projects/Dash-Stroke/line.html">Line Animation</a></p>
+      <p class="svg-link"><span>6. &nbsp; </span> <a href="./projects/Rotation/roation.html">Diamond</a></p>
+
       <p class="svg-link"><span>5. &nbsp; </span> <a href="./projects/Third-SVG/index.html">Minimal</a></p>
       <p class="svg-link"><span>4. &nbsp; </span> <a href="./projects/Name/name.html">Name</a></p>
       <p class="svg-link"><span>3. &nbsp; </span> <a href="./projects/Second-SVG/index.html">Logo Animation</a></p>
