--- a/day40/index.html
+++ b/day40/index.html
@@ -40,7 +40,7 @@
       <p>A place where I try to express myself with code. This here, is a gallery of my progress, where I learn and try to experiment with code <i class="fa fa-code" aria-hidden="true"></i></p>
 
       <ul class="links">
-        <li><a href="http://athoug.xyz/about.html"><i class="ion-android-globe"></i></a></li>
+        <li><a href="http://athoug.com/"><i class="ion-android-globe"></i></a></li>
         <li><a href="https://github.com/athoug"><i class="ion-social-github"></i></a></li>
         <li><a href="https://twitter.com/to0ogi"><i class="ion-social-twitter"></i></a></li>
         <li><a href="https://athougcodesatnight.tumblr.com"><i class="ion-social-tumblr"></i></a></li>
@@ -825,7 +825,7 @@
     </div>
     <footer>
       <ul class="bottom-links">
-        <li><a href="http://athoug.xyz/about.html"><i class="ion-android-globe"></i></a></li>
+        <li><a href="http://athoug.com/"><i class="ion-android-globe"></i></a></li>
         <li><a href="https://github.com/athoug"><i class="ion-social-github"></i></a></li>
         <li><a href="https://twitter.com/to0ogi"><i class="ion-social-twitter"></i></a></li>
         <li><a href="https://athougcodesatnight.tumblr.com"><i class="ion-social-tumblr"></i></a></li>
