--- a/day51/index.html
+++ b/day51/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <footer id='foot'>
-      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
     </footer>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
