--- a/day57/index.html
+++ b/day57/index.html
@@ -11,13 +11,13 @@
     <h1>Let's Go For A SpaceWalk</h1>
 
     <div class="Astro">
-    <img src="./img/Astronaut.png" alt="Astronaut">  
+    <img src="./img/Astronaut.png" alt="Astronaut">
     </div>
 
     <div id="space"></div>
 
     <footer id='foot'>
-      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
     </footer>
 
     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
