--- a/day44/index.html
+++ b/day44/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <footer id='foot'>
-      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
     </footer>
   </div>
 
