--- a/day54/index.html
+++ b/day54/index.html
@@ -49,7 +49,7 @@
   <body>
     <canvas id="myCanvas" resize></canvas>
     <footer id='foot'>
-      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
     </footer>
   </body>
 </html>
