--- a/default.html
+++ b/default.html
@@ -71,6 +71,7 @@
 
     <section>
         <div class="container">
+          <h3><span class="days"> Day 061 &nbsp;</span><a href="../day61/index.html" data-linktext="Ukulele" class="slide_from_bottom">Ukulele</a></h3>
             <h3><span class="days"> Day 060 &nbsp;</span><a href="../day60/index.html" data-linktext="5 Second Rule" class="slide_from_bottom">5 Second Rule</a></h3>
             <h3 class="arabic"><span class="days"> Day 059 &nbsp;</span><a href="../day59/index.html" data-linktext="عذوق تتعلم svg" class="slide_from_bottom">عذوق تتعلم svg</a></h3>
             <h3><span class="days"> Day 058 &nbsp;</span><a href="../day58/index.html" data-linktext="Dice Game" class="slide_from_bottom">Dice Game</a></h3>
