--- a/day61/index.html
+++ b/day61/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ukulele</title>
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
@@ -80,10 +81,10 @@
         		79.667,34.982 	"/>
         </g>
         <g id="lines">
-        	<line fill="none" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" x1="97" y1="67" x2="97" y2="524"/>
-        	<line fill="none" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" x1="133" y1="67" x2="133" y2="524"/>
-        	<polyline fill="none" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" points="121,524 121,67.022 122.604,32.74 	"/>
-        	<polyline fill="none" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" points="105.997,35.144 108,67.022 108,524 	"/>
+        	<line fill="none" data-key="65" class="strings" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" x1="97" y1="67" x2="97" y2="524"/>
+        	<line fill="none" data-key="83" class="strings" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" x1="133" y1="67" x2="133" y2="524"/>
+        	<polyline fill="none" data-key="68" class="strings" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" points="121,524 121,67.022 122.604,32.74 	"/>
+        	<polyline fill="none" data-key="70" class="strings" stroke="#D2D1D3" stroke-width="2" stroke-miterlimit="10" points="105.997,35.144 108,67.022 108,524 	"/>
         </g>
         <g id="strings">
         	<circle fill="#68A4A5" stroke="#13595B" stroke-width="2" stroke-miterlimit="10" cx="96.75" cy="478.916" r="5.75"/>
