--- a/default.html
+++ b/default.html
@@ -71,6 +71,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 063 &nbsp;</span><a href="../day63/index.html" data-linktext="Twirling Circles" class="slide_from_bottom">Twirling Circles</a></h3>
             <h3><span class="days"> Day 062 &nbsp;</span><a href="../day62/index.html" data-linktext="Piano Keys" class="slide_from_bottom">Piano Keys</a></h3>
             <h3><span class="days"> Day 061 &nbsp;</span><a href="../day61/index.html" data-linktext="Ukulele" class="slide_from_bottom">Ukulele</a></h3>
             <h3><span class="days"> Day 060 &nbsp;</span><a href="../day60/index.html" data-linktext="5 Second Rule" class="slide_from_bottom">5 Second Rule</a></h3>
