Small fixes with links and fonts

--- a/default.html
+++ b/default.html
@@ -24,6 +24,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Yantramanav:400,100,500|Raleway+Dots' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
@@ -52,9 +53,10 @@
 
         <nav>
             <ul>
-                <li id='about'><a href="about.html" class="underline_from_center">about</a></li>
-                <li id='github'><a href="https://github.com/athoug" target="_blank" class="underline_from_center">github</a></li>
-                <li id='email'><a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
+                <li id=''><i class="fa fa-user-o" aria-hidden="true"></i>
+ <a href="about.html" class="underline_from_center">about</a></li>
+                <li id=''><i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/athoug" target="_blank" class="underline_from_center">github</a></li>
+                <li id=''><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
             </ul>
         </nav>
 
