--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
         <meta name="theme-color" content="#ffffff">
 
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Yantramanav:400,100,500|Raleway+Dots' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
@@ -45,9 +46,9 @@
 
             <nav>
                 <ul>
-                    <li id='about'><a href="default.html" class="underline_from_center">home</a></li>
-                    <li id='github'><a href="https://github.com/athoug" class="underline_from_center" target="_blank">github</a></li>
-                    <li id='email'><a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
+                    <li id=''><i class="fa fa-user-o" aria-hidden="true"></i> <a href="default.html" class="underline_from_center">home</a></li>
+                    <li id=''><i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/athoug" class="underline_from_center" target="_blank">github</a></li>
+                    <li id=''><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
                 </ul>
             </nav>
 
