Meta tags added

--- a/default.html
+++ b/default.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A challenge Athoug set out for herself where she learns to program through developing projects and experimenting with different technologies ranging from HTML, CSS, JAVASCRIPT, APIs, JSON, JQUERY, NODE and diffrent libraries and frameworks.">
+
     <title>Athoug's 180 days challenge</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
