--- a/default.html
+++ b/default.html
@@ -98,7 +98,7 @@
             <h3><span class="days"> Day 043 &nbsp;</span><a href="../day43/index.html" data-linktext="Currancy Converter" class="slide_from_bottom">Currancy Converter</a></h3>
             <h3><span class="days"> Day 042 &nbsp;</span><a href="../day42/intro/index.html" data-linktext="Practice 1" class="slide_from_bottom">Practice 1</a> <a href="../day42/noiseBg/index.html" data-linktext="2" class="slide_from_bottom">2</a> <a href="../day42/index.html" data-linktext="Result" class="slide_from_bottom">Result</a></h3>
             <h3><span class="days"> Day 041 &nbsp;</span><a href="../day41/index.html" data-linktext="Happy" class="slide_from_bottom">Happy</a></h3>
-            <h3><span class="days"> Day 040 &nbsp;</span><a href="../day40/index.html" data-linktext="Generative Art" class="slide_from_bottom">Generative Art</a></h3>
+            <h3><span class="days"> Day 040 &nbsp;</span><a href="http://generativeart.xyz/" data-linktext="Generative Art" class="slide_from_bottom">Generative Art</a></h3>
             <h3><span class="days"> Day 039 &nbsp;</span><a href="../day39/index.html" data-linktext="Trumpland" class="slide_from_bottom">Trumpland</a></h3>
             <h3><span class="days"> Day 038 &nbsp;</span><a href="../day38/index.html" data-linktext="Simon" class="slide_from_bottom">Simon</a></h3>
             <h3><span class="days"> Day 037 &nbsp;</span><a href="../day37/index.html" data-linktext="meh" class="slide_from_bottom">meh</a></h3>
