--- a/day40/index.html
+++ b/day40/index.html
@@ -64,14 +64,14 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <a href="p5/practice/color_bounce/index.html">
+          <a href="p5/practice/fireworks/index.html">
             <div class="data" data-number="1">
-              <img src="p5/practice/color_bounce/color_bounce.gif" alt="" class="img-responsive img-rounded">
+              <img src="p5/practice/fireworks/day-1.gif" alt="" class="img-responsive img-rounded">
             </div>
           </a>
           <div class="caption">
-            <h3>Color Bounce</h3>
-            <h4>This was a really fun sketch to do. Basically the color changes based on the ball hitting the corders. </h4>
+            <h3>FireWorks</h3>
+            <h4>What better way to start the year other than with a firework sketch!</h4>
           </div>
         </div>
       </div>
