Add links and data to site

--- a/day40/index.html
+++ b/day40/index.html
@@ -62,6 +62,21 @@
       </div>
     </div>
     <div class="row">
+      <!-- Day 2 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/using-random/index.html">
+            <div class="data" data-number="2">
+              <img src="p5/practice/using-random/day-2.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Random Lines</h3>
+            <h4>We experament with random here. We draw random lines based on random points</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 1 -->
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
           <a href="p5/practice/fireworks/index.html">
