--- a/day40/index.html
+++ b/day40/index.html
@@ -61,7 +61,36 @@
         <h4 class="long-copy">I have always been fascinated by generative art. I saw videos, posts, and installations that used code for expression. It always left me with aww. I dabbled a bit in it but never took it all the away. I kept thinking of it in the back of my head but never committed. However, this year is different. I am going to make a sketch a day until I create my own installation.</h4>
       </div>
     </div>
+
     <div class="row">
+      <!-- Day 4 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/animated-white-lines/index.html">
+            <div class="data" data-number="4">
+              <img src="p5/practice/animated-white-lines/day-4.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Animating Lines</h3>
+            <h4>In this practice, it's more of a re-hashing of what I learned. By animating lines at random end-points</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 3 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/workingFlow1/index.html">
+            <div class="data" data-number="3">
+              <img src="p5/practice/workingFlow1/day-3.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>FrameRate</h3>
+            <h4>Experamenting with frameRate speed and understanding the diffrence betwen RGB and CYMK</h4>
+          </div>
+        </div>
+      </div>
       <!-- Day 2 -->
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
@@ -92,6 +121,7 @@
       </div>
     </div>
 
+    <div class="white-space"></div>
 
     <!-- 2017 sketches | The magic is bellow -->
     <div class="row">
