--- a/day40/p5/practice/animated-white-lines/index.html
+++ b/day40/p5/practice/animated-white-lines/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>using-random</title>
+    <title>animated-white-lines</title>
     <script src="../../../libraries/p5.js" type="text/javascript"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
