--- a/day40/p5/practice/fireworks/index.html
+++ b/day40/p5/practice/fireworks/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>fireworks</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
+    <script src="../../../libraries/p5.js" type="text/javascript"></script>
 
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-    
     <script src="particle.js" type="text/javascript"></script>
     <script src="firework.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
