--- a/day40/index.html
+++ b/day40/index.html
@@ -63,6 +63,118 @@
     </div>
 
     <div class="row">
+      <!-- Day 12 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/target/index.html">
+            <div class="data" data-number="12">
+              <img src="p5/practice/target/day-12.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Target</h3>
+            <h4>A great experament with system variables.</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 11 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/rainbow-vertical/index.html">
+            <div class="data" data-number="11">
+              <img src="p5/practice/rainbow-vertical/day-11.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Rainbow Vertical</h3>
+            <h4>Randomness is a mezmorizing concept. It's always fun to experament with. It takes a simple sketch and makes it interesting</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 10 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/random-vertical/index.html">
+            <div class="data" data-number="10">
+              <img src="p5/practice/random-vertical/day-10.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Random Vertical Lines</h3>
+            <h4>Randomness is a mezmorizing concept. It's always fun to experament with. It takes a simple sketch and makes it interesting</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 9 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/random-horizontal-vertical/index.html">
+            <div class="data" data-number="9">
+              <img src="p5/practice/random-horizontal-vertical/day-9.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Random Straight Lines</h3>
+            <h4>Randomness is a mezmorizing concept. It's always fun to experament with. It takes a simple sketch and makes it interesting</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 8 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/light-beams/index.html">
+            <div class="data" data-number="8">
+              <img src="p5/practice/light-beams/day-8.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Light Beams</h3>
+            <h4>Another wonderful tutorial. it solidified my understanding of lines, and space. </h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 7 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/abstact-clock/index.html">
+            <div class="data" data-number="7">
+              <img src="p5/practice/abstact-clock/day-7.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Abstract Clock</h3>
+            <h4>This was a brilliant practice, it gave me an idea of how to use time as variables for movment</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 6 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/pulse-circle/index.html">
+            <div class="data" data-number="6">
+              <img src="p5/practice/pulse-circle/day-6.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Pulse</h3>
+            <h4>This was a fun exersize experamenting with logic and comparison operators, it was fun trying to change the speed of growth.</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 5 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/bounce-ball/index.html">
+            <div class="data" data-number="5">
+              <img src="p5/practice/bounce-ball/day-5.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Movement</h3>
+            <h4>We go over the concept of variables one more time. it hones in the idea of time and space.</h4>
+          </div>
+        </div>
+      </div>
       <!-- Day 4 -->
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
