--- a/day40/index.html
+++ b/day40/index.html
@@ -63,6 +63,90 @@
     </div>
 
     <div class="row">
+      <!-- Day 18 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/warhol-tribute/index.html">
+            <div class="data" data-number="18">
+              <img src="p5/practice/warhol-tribute/day-18.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Warhol Tribute</h3>
+            <h4>Taking it a bit further and playing with images. Tryig to make a responsive Warhol Tribute</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 17 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/conditional/index.html">
+            <div class="data" data-number="17">
+              <img src="p5/practice/conditional/day-17.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Conditions</h3>
+            <h4>Using conditionals to fill in the circle</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 16 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/random-polkadots/index.html">
+            <div class="data" data-number="16">
+              <img src="p5/practice/random-polkadots/day-16.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Ranomd Polkadots</h3>
+            <h4>Using the random function to change the circle position as well as color range</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 15 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/animated-colored-lines/index.html">
+            <div class="data" data-number="15">
+              <img src="p5/practice/animated-colored-lines/day-15.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Animate Lines</h3>
+            <h4>Taking conditionals further by animating lines one by one as well as changing the stroke color based on a condition</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 14 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/diffrent-speeds/index.html">
+            <div class="data" data-number="14">
+              <img src="p5/practice/diffrent-speeds/day-14.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Variables in Action</h3>
+            <h4>Variables have many uses. One is demonstarating speed. How each shape has a different movment. </h4>
+          </div>
+        </div>
+      </div>
+      <!-- Day 13 -->
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <a href="p5/practice/moving-ciecle-with-variable/index.html">
+            <div class="data" data-number="13">
+              <img src="p5/practice/moving-ciecle-with-variable/day-13.gif" alt="" class="img-responsive img-rounded">
+            </div>
+          </a>
+          <div class="caption">
+            <h3>Variables</h3>
+            <h4>Variables have many uses. One is manipulatin or rather updating position based on time. </h4>
+          </div>
+        </div>
+      </div>
       <!-- Day 12 -->
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
