--- a/day64/index.html
+++ b/day64/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
         <title>Women in STEM</title>
 
@@ -10,6 +11,25 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.0/babel.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js"></script>
+
+        <!-- Google tracker -->
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-79841098-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+
     </head>
 
     <body>
@@ -19,7 +39,7 @@
 
 
         <footer>
-            <p>Athoug Alsoughayer &copy; 2018 &ensp; <a href="#">home</a> | <a href="#">blog</a></p>
+            <p>Athoug Alsoughayer &copy; 2018 &ensp; <a href="../default.html">home</a> | <a href="http://athougcodesatnight.com/">blog</a></p>
         </footer>
         <script type="text/babel" src="./js/script.js"></script>
     </body>
